# sd-ui

./: .gitignore  CLAUDE.md  README.md  biome.json  lefthook.yml  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts
.claude/agents/: co-yuma.md  frontend-quality-guardian.md  git-workflow-helper.md  nextjs-expert.md  react-expert.md  typescript-expert.md
.claude/commands/: commit-current.md  commit.md  pr-current.md  pr-update.md  pr.md
.github/workflows/: ci.yml
python/: generator.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/controlnet/list/: route.ts
src/app/api/generate/img2img/: route.ts
src/app/api/generate/txt2img/: route.ts
src/app/api/job/[id]/: route.ts
src/app/api/lora/list/: route.ts
src/app/api/model/info/: route.ts
src/app/api/model/list/: route.ts
src/app/api/prompt-refine/: route.ts
src/app/api/sampler/list/: route.ts
src/components/: BatchInput.tsx  ControlNetPanel.tsx  GeneratedImages.tsx  ImageUploader.tsx  LoRAPanel.tsx  ModelSelector.tsx  ParameterPanel.tsx  PromptRefineComparison.tsx  PromptRefinePanel.tsx  QueuePanel.tsx  theme-provider.tsx  theme-toggle.tsx
src/components/ui/: card.tsx  progress.tsx  select.tsx  slider.tsx  tabs.tsx  textarea.tsx  toast.tsx  toaster.tsx
src/hooks/: use-error-handler.ts  use-toast.ts  useBatchProcessing.ts  useDeviceInfo.ts  useGenerationQueue.ts  useImageHistory.ts  useLocalStorage.ts  usePromptRefineLoop.ts  useSettings.ts
src/lib/: imageStorage.ts  jobStore.ts  ollama.ts
src/types/: error.ts  generation.ts
