[project]
name = "stable-diffusion-webui"
version = "1.0.0"
description = "Stable Diffusion WebUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers==0.25.1",
    "transformers==4.37.2",
    "accelerate==0.26.1",
    "torch>=2.0.0,<2.6",
    "Pillow==10.2.0",
    "safetensors==0.4.2",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'linux'",
]
