[project]
name = "stable-diffusion-webui"
version = "1.0.0"
description = "Stable Diffusion WebUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers>=0.30.0,<0.32.0",
    "transformers>=4.40.0,<4.50.0",
    "accelerate>=0.30.0,<0.35.0",
    "torch>=2.4.0,<2.6",
    "numpy<2",
    "Pillow>=10.0.0",
    "safetensors>=0.4.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]
